--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ header img {
     width: 120px;
     border-radius: 50%;
     margin-left: 30px;
-    margin-top: 4px;
+    margin-top: 30px;
+    margin-bottom: 21px;
 }
 
 header {
@@ -84,18 +85,34 @@ header img:hover {
 
 }
 
+.form-container {
+    display: flex;
+    justify-content: end;
+    align-items:  end;
+}
+
+
 .form {
-    margin-top: 40px;
     margin-right: 30px;
-    text-align: center;
+    margin-bottom: 21px;
 }
 
 input {
     height: 20px;
 }
 
+i.fa-solid.fa-magnifying-glass {
+    padding-right: 5px;
+    padding-left: 5px;
+    color: white;
+}
+
 label {
     font-size: 18px;
+}
+
+input#textruta {
+    margin-top: 10px;
 }
 
 h1 {
@@ -106,7 +123,20 @@ h1 {
     letter-spacing: 5px;
 }
 
+.hero-image {
+    background-image: url(/images/hero-image.avif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-position-y: -5px;
+    position: relative;
+    height: 300px;
+    width: 100%;
+}
 
+main {
+    width: 600px;
+}
 
 @keyframes rotation {
 
