ordnade till max-witdh och la in en hamburgerbild

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    display: flex;
+    display: flex; 
     justify-content: center;
     margin: 0px;
     padding: 0px;
@@ -73,6 +73,7 @@ nav {
     margin: 0;
     padding: 0;
     flex-grow: 1;
+    
 }
 
 .navbar li {
@@ -102,10 +103,6 @@ h1 {
     letter-spacing: 5px;
     font-size: 50px;
     color: rgb(255, 252, 249);
-}
-
-main {
-    width: 600px;
 }
 
 .hero-image {
@@ -265,11 +262,16 @@ button.submit {
           "footer footer";
         
     }
+
+    .timeline {
+        width: 600px;
+    }
 }
 
 @media (max-width: 768px) {
     .grid-container {
         display: grid;
+        max-width: 400px;
         grid-template-columns: 1fr;
         grid-template-areas:
             'nav'
@@ -277,7 +279,21 @@ button.submit {
             'main'
             'aside'
             'footer';
+    }
+
+            .timeline {
+                width: 300px;
+            }
+
         
     }
+.nav-bar {
+    justify-content: start;
+}
+    .hero-image {
+
+    }
+
+
 }
 
