--- a/style.css
+++ b/style.css
@@ -329,13 +329,13 @@ button.submit {
 }
 
 #bookForm button {
-    width: 50px;
-    height: 50px;
-    border-radius: 2px;
+    width: 70px;
+    height: 25px;
+    border-radius: 4px;
+    border: 1px solid;
     margin-right: 10px;
     cursor: pointer;
-
-
+    background: rgb(233, 232, 226);
 }
 
 #bookForm {
@@ -372,6 +372,12 @@ button.submit {
 
 .genre-text {
     font-weight: 300;
+}
+
+#inputForm {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
 }
 
 @keyframes fade-in {
