--- a/style.css
+++ b/style.css
@@ -325,7 +325,6 @@ button.submit {
     width: 200px;
     height: 112px;
     object-fit: cover;
-
 }
 
 #bookForm button {
@@ -333,6 +332,7 @@ button.submit {
     height: 25px;
     border-radius: 4px;
     border: 1px solid;
+    margin-bottom: 10px;
     margin-right: 10px;
     cursor: pointer;
     background: rgb(233, 232, 226);
@@ -348,6 +348,12 @@ button.submit {
 #bookForm div {
     width: 200px;
     text-align: center;
+}
+
+.book-div {
+    border: 1px solid;
+    box-shadow: 2px 2px 4px rgb(98, 108, 99);
+    background-color: white;
 }
 
 .book-title {
@@ -378,6 +384,23 @@ button.submit {
     display: flex;
     flex-direction: column;
     width: 300px;
+}
+
+.form-container {
+    justify-content: center;
+    padding-top: 50px;
+}
+
+#inputForm label {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#inputForm button {
+    margin-top: 10px;
+    padding: 25px;
+    text-align: center;
+    padding-bottom: 40px;
 }
 
 @keyframes fade-in {
